# ss-server

./: Cargo.toml  build.sh  docker-compose.yaml  key-drop.temp.service
src/: defs.rs  main.rs  route.rs
src/database/: factory.rs  mod.rs  mongo_factory.rs
src/handler/: home.rs  share.rs
src/handlers/: mod.rs  rest.rs  share.rs
src/services/: mod.rs  string_object.rs
src/store/: memory.rs  mod.rs  redis.rs
statics/: logo.avif  scripts.js
template/: about.html  faqs.html  index.html  layout.html  share.html  ss-get.html  ss-post.html
template/partials/: footer.html  navbar.html
